--- a/位运算.md
+++ b/位运算.md
@@ -13,9 +13,11 @@ public:
     }
 };
 ```
-由于相同数字异或即为0，所以最后会剩下一个所要的数字。
+  
+由于相同数字异或即为0，所以最后会剩下一个所要的数字。    
+MORE:    
+1、任意数与0异或仍为自身   
+2、任意数与其自身异或等于0   
 
-MORE:
-1、任意数与0异或仍为自身。
-2、任意数与其自身异或等于0
-把数组中所有元素异或，出现偶数次的数会变为0，剩下奇数次数的数（但只能是找一个出现奇数词的，多个奇数次则为它们的异或值）。
+把数组中所有元素异或，出现偶数次的数会变为0，剩下奇数次数的数（但只能是找一个出现奇数词的，多个奇数次则为它们的异或值）。   
+
