--- a/剑指/字符串换位.md
+++ b/剑指/字符串换位.md
@@ -13,7 +13,7 @@ class Solution {
 public:
     string reverseLeftWords(string s, int n) {
         reverse(s.begin(),s.begin()+n);   //先翻转前k个
-        reverse(s.begin()+n,s.end());;    //再翻转前k个以后的
+        reverse(s.begin()+n,s.end());     //再翻转前k个以后的
         reverse(s.begin(),s.end());       //字符串全翻转一遍
         return s;
     }
