--- a/leetbook/位运算.md
+++ b/leetbook/位运算.md
@@ -13,11 +13,31 @@ public:
     }
 };
 ```
+由于相同数字异或即为0，所以最后会剩下一个所要的数字。  
   
-由于相同数字异或即为0，所以最后会剩下一个所要的数字。    
+另一道：两个数字只出现一次，剩下的都是出现两次，求这两个只出现一次的数字。  
+```
+class Solution {
+    public int[] singleNumbers(int[] nums) {
+        int x = 0;
+        for (int val : nums)  x ^= val;
+        int flag = x & (-x); //lowbit  x & (-x)本身的作用是得到最低位的1，说明A和B在这一位上一个是1一个是0
+        // 利用这个1来进行分组，x是数A和B异或的结果，x的二进制串上的任何一个1，都能成为区分A和B的条件
+        int res = 0; // 用于记录A或B其中一者
+        // 分组操作
+        for (int val : nums) {
+            // 根据二进制位上的那个“1”进行分组,分组的结果必然是相同的数在相同的组，且还各自有一个结果数
+            // 因此每组的数再与res=0一路异或下去，最终会得到那个结果数A或B
+            if (flag & val)   res ^= val; //取在这一位上为1的那一组来求出这一组中含有的结果数，当然也可以是取另一组
+        }
+        // 利用先前的x进行异或运算得到另一个，即利用自反性
+        return new int[] {res, x ^ res};
+    }
+}
+```
 MORE:    
-1、任意数与0异或仍为自身   
-2、任意数与其自身异或等于0   
-
+1、x^x=0，x^0=x  
+2、(a^b)^c == a^(b^c)  
+3、A^B^B = A^0 = A ---> A ^ B = C 则 C ^ B = A  
 把数组中所有元素异或，出现偶数次的数会变为0，剩下奇数次数的数（但只能是找一个出现奇数词的，多个奇数次则为它们的异或值）。   
 
