--- a/leet&nowcoder/子集(回溯法).md
+++ b/leet&nowcoder/子集(回溯法).md
@@ -133,5 +133,73 @@ public:
 };
 ```
   
+组合总和：  
+给定一个无重复元素的数组 candidates 和一个目标数 target ，找出 candidates 中所有可以使数字和为 target 的组合。candidates 中的数字可以无限制重复被选取。  
+说明：所有数字（包括 target）都是正整数。解集不能包含重复的组合。  
+```C++
+class Solution {
+public:
+    vector<vector<int>> combinationSum(vector<int>& candidates, int target) {
+        vector<vector<int>> ans;
+        vector<int> temp;
+        sort(candidates.begin(),candidates.end());
+        dfs(candidates,temp,ans,target,0);
+        return ans;
+    }
 
+    void dfs(vector<int>& candidates,vector<int>& temp,vector<vector<int>>& ans,int target,int index)
+    {
+        if(target==0)  
+        {
+            ans.push_back(temp);
+            return;
+        }
+        if(index>=candidates.size())  return;
+        if(target-candidates[index]<0)  return;
 
+        for(int i=index;i<candidates.size();i++)
+        {
+            temp.push_back(candidates[i]);
+            dfs(candidates,temp,ans,target-candidates[i],i);
+            temp.pop_back();
+        }
+
+    }
+};
+```
+  
+组合总和2：  
+给定一个数组 candidates 和一个目标数 target ，找出 candidates 中所有可以使数字和为 target 的组合。candidates 中的每个数字在每个组合中只能使用一次。  
+说明：所有数字（包括目标数）都是正整数。解集不能包含重复的组合。  
+```C++
+class Solution {
+public:
+    vector<vector<int>> combinationSum2(vector<int>& candidates, int target) {
+        vector<vector<int>> ans;
+        vector<int> temp;
+        sort(candidates.begin(),candidates.end());
+        dfs(candidates,temp,ans,target,0);
+        return ans;
+    }
+
+    void dfs(vector<int>& candidates,vector<int>& temp,vector<vector<int>>& ans,int target,int index)
+    {
+        if(target==0)  
+        {
+            ans.push_back(temp);
+            return;
+        }
+        if(index>=candidates.size())  return;
+        if(target-candidates[index]<0)  return;
+
+        for(int i=index;i<candidates.size();i++)
+        {
+            if(i>index  &&  candidates[i]==candidates[i-1])  continue;
+            temp.push_back(candidates[i]);
+            dfs(candidates,temp,ans,target-candidates[i],i+1);
+            temp.pop_back();
+        }
+
+    }
+};
+```
