--- a/101/贪心.md
+++ b/101/贪心.md
@@ -57,4 +57,40 @@ public:
 string sum = accumulate(v.begin() , v.end() , string(" ")); 从空字符串开始，把v里的每个元素连接成一个字符串。//链接：https://blog.csdn.net/qq_40803710/article/details/80273811  
   
   
-3\
+**3\435 无重叠区间**  
+给定一个区间的集合，找到需要移除的区间的最小数量，使剩余区间互不重叠。区间的终点总是大于它的起点。区间 [1,2] 和 [2,3] 的边界相互“接触”，但没有相互重叠。  
+输入: [ [1,2], [2,3], [3,4], [1,3] ]  
+输出: 1 因为移除 [1,3] 后，剩下的区间没有重叠。  
+链接：https://leetcode-cn.com/problems/non-overlapping-intervals  
+  
+将每个区间右边值按照从小到大排列，尽可能使用多个区间即贪心使右边值尽量小从而放下更多区间
+```C++
+class Solution {
+public:
+    //此处注意必须要是static才可以调用这个函数
+    static bool cmp(const vector<int> &a,const vector<int> &b)
+    {
+        return a[1]<b[1];
+    }
+
+    int eraseOverlapIntervals(vector<vector<int>>& intervals) {
+        if(intervals.size()<=1)
+            return 0;
+        sort(intervals.begin(),intervals.end(),cmp);
+        int sum=0;
+        int nowend=intervals[0][1];
+        for(int i=1;i<intervals.size();i++)
+        {
+            if(intervals[i][0]<nowend)
+                sum++;
+            else
+                nowend=intervals[i][1];
+        }
+        return sum;
+    }
+};
+```
+cmp函数必须是static的原因在于：把cmp函数名作为实参传递给sort函数，函数内部用一个函数指针去调用cmp函数，普通的类成员函数cmp需要通过对象名.cmp()来调用，而sort函数内部直接cmp()导致错误。而在设置为static时，static静态成员函数不用添加对象名可以直接访问函数。  
+另外可以使用lambda匿名函数方式写：  
+sort( intervals.begin(), intervals.end(), [](vector<int> a, vector<int> b) {return a[1] < b[1];} );  
+
