--- a/101/贪心.md
+++ b/101/贪心.md
@@ -93,4 +93,36 @@ public:
 cmp函数必须是static的原因在于：把cmp函数名作为实参传递给sort函数，函数内部用一个函数指针去调用cmp函数，普通的类成员函数cmp需要通过对象名.cmp()来调用，而sort函数内部直接cmp()导致错误。而在设置为static时，static静态成员函数不用添加对象名可以直接访问函数。  
 另外可以使用lambda匿名函数方式写：  
 sort( intervals.begin(), intervals.end(), [](vector<int> a, vector<int> b) {return a[1] < b[1];} );  
-
+  
+4\605 种花  
+一个很长的花坛，一部分种了花，另一部分没有。花不能种在相邻的地上。一个整数数组表示花坛， 0 和 1 组成，其中 0 表示没种植花，1 表示种植了花。能否在不打破种植规则的情况下种入 n 朵花？  
+链接：https://leetcode-cn.com/problems/can-place-flowers
+  
+考虑每个0连续的区间能放下（sum-1）\2朵花，遇到1则进行结算。对于首尾既可以特殊处理，也可以认为首尾各左右多出来一个0，之后可以按照之前计算。  
+```C++
+class Solution {
+public:
+    bool canPlaceFlowers(vector<int>& flowerbed, int n) {
+        
+        int canp=0;
+        int sumof0=1;//左右各加一个0，此为左边
+        int m=flowerbed.size();
+        for(int i=0;i<flowerbed.size();i++)
+        {
+            if(flowerbed[i]==0) sumof0++;
+            else
+            {
+                canp+=(sumof0-1)/2;
+                if(canp>=n) return true;
+                sumof0=0;
+            }
+        }
+        sumof0++;
+        canp+=(sumof0-1)/2;
+        if(canp>=n) return true;
+        else return false;
+    }
+};
+```
+  
+  
