--- a/101/贪心.md
+++ b/101/贪心.md
@@ -94,7 +94,7 @@ cmp函数必须是static的原因在于：把cmp函数名作为实参传递给so
 另外可以使用lambda匿名函数方式写：  
 sort( intervals.begin(), intervals.end(), [](vector<int> a, vector<int> b) {return a[1] < b[1];} );  
   
-4\605 种花  
+**4\605 种花**  
 一个很长的花坛，一部分种了花，另一部分没有。花不能种在相邻的地上。一个整数数组表示花坛， 0 和 1 组成，其中 0 表示没种植花，1 表示种植了花。能否在不打破种植规则的情况下种入 n 朵花？  
 链接：https://leetcode-cn.com/problems/can-place-flowers
   
@@ -117,7 +117,7 @@ public:
                 sumof0=0;
             }
         }
-        sumof0++;
+        sumof0++;//此为右边
         canp+=(sumof0-1)/2;
         if(canp>=n) return true;
         else return false;
