--- a/101/贪心.md
+++ b/101/贪心.md
@@ -125,4 +125,45 @@ public:
 };
 ```
   
+**5\ 引爆气球**  
+每个气球直径的开始和结束坐标。开始坐标总是小于结束坐标。在坐标 x 射出一支箭，若有一个气球start ≤ x ≤ end，则该气球会被引爆。弓箭使得所有气球被引爆所需的弓箭最小数量。  
+数组 points ，其中 points [i] = [start,end] ，返回引爆所有气球所必须射出的最小弓箭数。  
+链接：https://leetcode-cn.com/problems/minimum-number-of-arrows-to-burst-balloons  
+
+注意排序时令按照左边小到大排序，如果左边一样则按照右边小到大排序。  
+```C++
+class Solution {
+public:
+    static bool cmp(const vector<int> &a, const vector<int> &b) {
+        if (a[0] == b[0]) return a[1] < b[1];
+        return a[0] < b[0];
+    }
+
+    int findMinArrowShots(vector<vector<int>>& points) {
+        if(points.size()==0) return 0;
+        //使用lambda表达式耗费内存很大，改用cmp
+        // sort(points.begin(),points.end(),[](vector<int> a,vector<int> b){
+        //     if(a[0]==b[0])  return a[1]<b[1];
+        //     return a[0]<b[0];
+        // });
+        sort(points.begin(), points.end(), cmp);
+        int nowr=points[0][1];
+        int sum=1;
+        int n=points.size();
+        for(int i=1;i<n;i++)
+        {
+            if(points[i][0]<=nowr)
+            {
+                nowr=min(points[i][1],nowr);
+            }
+            else
+            {
+                sum++;
+                nowr=points[i][1];
+            }
+        }
+        return sum; 
+    }
+};
+  
   
